# univeristy-db_0x1A

./: .gitignore  CMakeLists.txt  README.md
data/: female_names.txt  female_surnames.txt  male_names.txt  male_surnames.txt  streets_names.txt  towns_names.txt
src/: Employee.cpp  Person.cpp  PersonsGenerator.cpp  PeselGenerator.cpp  Student.cpp  db.cpp  main.cpp  pesel.cpp  peselBirthDateParser.cpp
src/Headers/: Employee.h  Person.h  PersonsGenerator.h  PeselGenerator.h  Student.h  db.h  pesel.h  peselBirthDateParser.h
src/ut/: test.cpp  test_2.cpp  ut.cpp
university_db-minproject/: CMakeLists.txt  university_db-minproject.cpp  university_db-minproject.h
